--- a/adminStyle.css
+++ b/adminStyle.css
@@ -7,12 +7,13 @@
    position:absolute;
   }
 
-
-  html, body {
-    height: 100%;
-    margin: 0;
+html, body {
+ height: 100%;
+ max-width: 100%;
+ overflow-x: hidden;
+ margin: 0;
     padding: 0;
-  }
+}
    
    .button {
      background-color: #4CAF50;
@@ -26,6 +27,10 @@
      margin: 4px 2px;
    }
 
-   .button {border-radius: 50%;}
-  
- 
+.container-fluid
+{
+ padding-left:0;
+ padding-right:0;
+}
+
+
